--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.3.3",
+    "bootstrap-vue": "npm:@ankurk91/bootstrap-vue@^3.0.2",
     "core-js": "^3.8.3",
+    "js-cookie": "^3.0.1",
     "vue": "^3.2.13",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.0.3",
+    "vue3-loading-screen": "^1.0.3",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
