--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "axios": "^1.3.3",
-    "bootstrap-vue": "npm:@ankurk91/bootstrap-vue@^3.0.2",
+    "bootstrap": "^5.2.3",
+    "bootstrap-vue-next": "^0.7.3",
     "core-js": "^3.8.3",
     "js-cookie": "^3.0.1",
     "vue": "^3.2.13",
