--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@vue-flow/core": "^1.14.3",
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
+    "bootstrap-vue-3": "^0.5.1",
     "bootstrap-vue-next": "^0.7.3",
     "core-js": "^3.8.3",
     "js-cookie": "^3.0.1",
