--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.6",
+    "@vue-flow/background": "^1.0.4",
+    "@vue-flow/controls": "^1.0.3",
     "@vue-flow/core": "^1.14.3",
+    "@vue-flow/minimap": "^1.0.3",
     "axios": "^1.3.3",
     "bootstrap": "^5.2.3",
     "bootstrap-vue-3": "^0.5.1",
